[gd_scene load_steps=2 format=3 uid="uid://c3j86cl2mv3wf"]

[ext_resource type="Script" uid="uid://dn4ifxs7fe2bc" path="res://Scenes/resource_panel.gd" id="1_fcpbg"]

[node name="ResourcePanel" type="Node2D"]
script = ExtResource("1_fcpbg")

[node name="LabelsVbox" type="VBoxContainer" parent="."]
offset_right = 160.0
offset_bottom = 196.0

[node name="FocusLabel" type="Label" parent="LabelsVbox"]
layout_mode = 2
text = "Focus
"
horizontal_alignment = 1
vertical_alignment = 3

[node name="ResolveLabel" type="Label" parent="LabelsVbox"]
layout_mode = 2
text = "Resolve
"
horizontal_alignment = 1
vertical_alignment = 3

[node name="TimeLabel" type="Label" parent="LabelsVbox"]
layout_mode = 2
text = "Time"
horizontal_alignment = 1
vertical_alignment = 3

[node name="ExhaustionLabel" type="Label" parent="LabelsVbox"]
layout_mode = 2
text = "Exhaustion
"
horizontal_alignment = 1
vertical_alignment = 3

[node name="ResourcePanelBG" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.2)
offset_right = 161.0
offset_bottom = 196.0
